fix-align-left

--- a/pages/css/products.css
+++ b/pages/css/products.css
@@ -181,7 +181,7 @@ body, .container-grid{
 .esp-tec{
     position: absolute;
     bottom: 10%;
-    left: 45%;
+    left: 43%;
     border: 2px solid rgb(255, 255, 255);
     text-align: center;
     padding: 20px;
@@ -306,8 +306,8 @@ body, .container-grid{
     grid-template-rows: auto;
     width: 100%;
     height: 100vh;
-    /* margin: 50px;
-    margin-top: 200px; */
+    /* margin: 50px; */
+    margin-top: 200px;
 
     /* justify-items: center; */
 
